--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,35 @@
+cachetools==3.1.1
 Click==7.0
+dill==0.2.9
+enum34==1.1.6
 Flask==1.0.3
+future==0.16.0
+futures==3.2.0
+gax-google-logging-v2==0.8.3
+gax-google-pubsub-v1==0.8.3
+gcloud==0.17.0
+google-auth==1.6.3
+google-gax==0.16.0
+googleapis-common-protos==1.6.0
+grpc-google-logging-v2==0.8.1
+grpc-google-pubsub-v1==0.8.1
+grpcio==1.21.1
 gunicorn==19.9.0
+httplib2==0.13.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
+jws==0.1.3
 MarkupSafe==1.1.1
+oauth2client==3.0.0
+ply==3.8
+protobuf==3.8.0
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
+pycryptodome==3.4.3
+Pyrebase==3.0.27
+python-jwt==2.0.1
+requests==2.11.1
+requests-toolbelt==0.7.0
+rsa==4.0
+six==1.12.0
 Werkzeug==0.15.4
