--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
+CacheControl==0.12.5
 cachetools==3.1.1
 Click==7.0
 dill==0.2.9
 enum34==1.1.6
+firebase-admin==2.17.0
 Flask==1.0.3
 future==0.16.0
 futures==3.2.0
 gax-google-logging-v2==0.8.3
 gax-google-pubsub-v1==0.8.3
 gcloud==0.17.0
+google-api-core==1.13.0
+google-api-python-client==1.7.9
 google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-cloud-core==1.0.2
+google-cloud-firestore==1.2.0
+google-cloud-storage==1.16.1
 google-gax==0.16.0
+google-resumable-media==0.3.2
 googleapis-common-protos==1.6.0
 grpc-google-logging-v2==0.8.1
 grpc-google-pubsub-v1==0.8.1
@@ -20,6 +29,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 jws==0.1.3
 MarkupSafe==1.1.1
+msgpack==0.6.1
 oauth2client==3.0.0
 ply==3.8
 protobuf==3.8.0
@@ -27,8 +37,10 @@ pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycryptodome==3.4.3
 python-jwt==2.0.1
+pytz==2019.1
 requests==2.11.1
 requests-toolbelt==0.7.0
 rsa==4.0
 six==1.12.0
+uritemplate==3.0.0
 Werkzeug==0.15.4
