--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-apturl==0.5.2
-asn1crypto==0.24.0
-Brlapi==0.6.6
 CacheControl==0.12.5
 cachetools==3.1.1
-certifi==2018.1.18
+certifi==2019.6.16
 chardet==3.0.4
-command-not-found==0.3
-cryptography==2.1.4
-cupshelpers==1.0
-defer==1.0.6
-distro-info===0.18ubuntu0.18.04.1
+Click==7.0
+enum34==1.1.6
 firebase-admin==2.17.0
+Flask==1.1.1
+futures==3.3.0
 google-api-core==1.14.2
 google-api-python-client==1.7.11
 google-auth==1.6.3
@@ -21,60 +17,20 @@ google-cloud-storage==1.18.0
 google-resumable-media==0.3.2
 googleapis-common-protos==1.6.0
 grpcio==1.23.0
-httplib2==0.9.2
-idna==2.6
-keyring==10.6.0
-keyrings.alt==3.0
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-louis==3.5.0
-Mako==1.0.7
-MarkupSafe==1.0
-mate-hud==18.4.8
-mate-tweak==18.4.16
+httplib2==0.13.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 msgpack==0.6.1
-netifaces==0.10.4
-oauth==1.0.1
-olefile==0.45.1
-onboard==1.4.1
-pexpect==4.2.1
-Pillow==5.1.0
+pkg-resources==0.0.0
 protobuf==3.9.1
-psutil==5.4.2
 pyasn1==0.4.6
 pyasn1-modules==0.2.6
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-pygobject==3.26.1
-python-apt==1.6.4
-python-dateutil==2.6.1
-python-debian==0.1.32
-python-xapp==1.0.0
-python-xlib==0.20
 pytz==2019.2
-pyxdg==0.25
-PyYAML==3.12
-reportlab==3.4.0
-requests==2.18.4
-requests-unixsocket==0.1.5
+requests==2.22.0
 rsa==4.0
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-sessioninstaller==0.0.0
-setproctitle==1.1.10
-simplejson==3.13.2
-six==1.11.0
-systemd-python==234
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
+six==1.12.0
 uritemplate==3.0.0
-urllib3==1.22
-usb-creator==0.3.3
-virtualenv==16.7.3
-wadllib==1.3.2
-xkit==0.0.0
-zope.interface==4.3.2
+urllib3==1.25.3
+Werkzeug==0.15.5
