--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 msgpack==0.6.1
-pkg-resources==0.0.0
+# pkg-resources==0.0.0
 protobuf==3.9.1
 pyasn1==0.4.6
 pyasn1-modules==0.2.6
