--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Click==7.0
 enum34==1.1.6
 firebase-admin==2.17.0
 Flask==1.1.1
-futures==3.1.1
+futures==3.3.0
 google-api-core==1.14.2
 google-api-python-client==1.7.11
 google-auth==1.6.3
@@ -17,13 +17,14 @@ google-cloud-storage==1.18.0
 google-resumable-media==0.3.2
 googleapis-common-protos==1.6.0
 grpcio==1.23.0
+gunicorn==19.9.0
 httplib2==0.13.1
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 msgpack==0.6.1
-# pkg-resources==0.0.0
+pkg-resources==0.0.0
 protobuf==3.9.1
 pyasn1==0.4.6
 pyasn1-modules==0.2.6
